--- a/src/components/previewCom/previewCom.css
+++ b/src/components/previewCom/previewCom.css
@@ -9,21 +9,27 @@
 .showCard{
     margin: 10px;
     width: fit-content;
+    min-width: 150px;   
     height: fit-content;
     box-shadow: 0px 0px 10px 1px gray;    
     border-radius: 20px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;    
 }
 .showCard>h3, .showCard>p, .showCard>button{
     margin: 5px;
+    overflow: auto;
 }
-#rmBtn{
-    padding: 5px 10px;
-    outline: none;
-    border: none;
-    border-radius: 10px; 
-    background-color: rgb(218, 218, 218);
+.showCard>hr{
+    margin-top: 10px;
+}
+#rmBtn{  
+    margin-top: 5px;     
+    color: gray;    
+    align-self: flex-end;     
 }
 #rmBtn:hover{
-    background-color: rgb(212, 170, 170);
+    color: rgb(168, 0, 0);
 }
